--- a/boutique3/composer.json
+++ b/boutique3/composer.json
@@ -27,7 +27,8 @@
         "symfony/symfony": "3.4.*",
         "symfony/asset":"^3.4",
         "symfony/validator": "^3.4",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+        "friendsofsymfony/user-bundle": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
